# City-Networks

./: .gitignore  README.md  install_uv.sh  main.py  train.py  train_new.py  train_run.sh
CityNet/: .gitignore  ablation.py  bottleneck.py  caveman.py  hierarchial_rw_e2e.py  hierarchial_rw_model.py  hr_hrw_EAT.py  hrw_analysis.py  mpnn_hrw_compare.py  optimal_train.sh  periodic_rw_bind.cpp  pyproject.toml  run_ablation.sh  setup.py  structure.md  test_uv.sh  train.py  train_hierarchial_rw.py  train_hrw.py  train_hrw.sh  train_run.sh  visual_.py  visual_mp.py
CityNet/May08/: archiv_train.py  la-gt.csv  la-sage.csv  paris-cheb.csv  paris-gcn.csv  paris-gt.csv  paris-sage.csv  paris-sgformer.csv  shanghai-gcn.csv  shanghai-gt.csv  shanghai-sage.csv
CityNet/May08/la_cheb/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/la_gcn/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/la_gt/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/la_sage/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/la_sgformer/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/london_cheb/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/london_gcn/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/london_gt/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/london_sage/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/london_sgformer/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/paris_cheb/: epochs-30000_nlayers-2_nhops-2.json
CityNet/May08/paris_gcn/: epochs-30000_nlayers-2_nhops-2.json
CityNet/benchmark/: configs.py  gnn.py
GraphBench/: baselines.py  baselines.sh  best.py  hrw_bridges_optimized_new.py  hrw_maxcliques.py  hrw_maxcliques_ce_optimized_new.py  hrw_maxmatching_optimized.py  optimal.sh  pre_compute.py  pyproject.toml  visual.py
GraphBench/maxclique_hard/: baseline_results.csv
GraphBench/maxclique_medium/: baseline_results.csv
Plaintoid/: Cora_SOTA_hrw.py  README.md  hierarchial_rw.py  model.py  pyproject.toml  train.py  train_hrw_ablation.py  train_opt.py
benchmark/: configs.py  sgformer.py
(+9 files in other folders)
